# ckanext-cgu-dataset-form

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
ckanext/cgu_dataset_form/: plugin.py
ckanext/cgu_dataset_form/templates/package/snippets/: additional_info.html  package_metadata_fields.html
